# aws-hackathon-20250915

./: .env example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  pyproject.toml  test_deployment.py  test_local.py  test_local_standalone.py  workflow.md
src/: __init__.py  hello_agent.py  prompt.py
src/side_project_analyst/: models.py
src/tool/: tavily_search.py
